# IMIB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: TargetLinkLibrariesSystem.cmake
evaluation_results/: README.md
resources/test_data/: books_10K_uint32  books_10K_uint32_equality_lookups  books_10K_uint32_range_lookups  books_10K_uint64  books_10K_uint64_equality_lookups  books_10K_uint64_range_lookups  books_10_uint32  books_10_uint64  books_50_uint64  books_50_uint64_equality_lookups_10  random_10K_float_convertible_uint32  random_10K_float_convertible_uint32_equality_lookups  random_10K_float_convertible_uint32_range_lookups  random_10K_float_convertible_uint64  random_10K_float_convertible_uint64_equality_lookups  random_10K_float_convertible_uint64_range_lookups
scripts/: bench_sparse_dense.py  compare_bulkinsert_bulkload.py  compare_insert_bulk_insert.py  create_data.py  format.sh  generate_uint_data.py  json_to_csv.py  json_utils.py  lint.sh  make_unique_data.py  plot_json_results.py  plot_multi_json_results.py  print_64bit_keys.py  random_unique_values.py  sort_result_files.py  subdirs_plot_multiple_json_results.py
src/: CMakeLists.txt  main.cpp  types.cpp  types.hpp
src/competitors/: art.hpp  b_tree_google_abseil.hpp  b_tree_tlx.hpp  bb_tree.hpp  hash_map_robin_hood_flat.hpp  hash_map_robin_hood_node.hpp  hash_map_tsl_robin.hpp  hash_map_tsl_sparse.hpp  judy.hpp  simple_vector.hpp  skip_list.hpp  sorted_vector.hpp  unordered_map.hpp
src/data/: column.hpp  data_generator.hpp  entry_generator.hpp  key_generator.hpp  load_binary_data.hpp  lookup_generator.hpp  random_key_generator.cpp  random_key_generator.hpp  tid_generator.hpp
src/evaluation/: memory_tracker.cpp  memory_tracker.hpp  report.cpp  report.hpp  report_exporter.cpp  report_exporter.hpp  timer.cpp  timer.hpp
src/execution/: benchmark_runner.cpp  benchmark_runner.hpp
src/execution/cases/: abstract_benchmark_case.hpp  base_benchmark_case.hpp  case_bulk_insert.hpp  case_bulk_load.hpp  case_equality_lookup.hpp  case_erase.hpp  case_insert.hpp  case_range_lookup.hpp
test/: CMakeLists.txt
test/competitors/: competitor_test.cpp  competitor_test_binary_test_data.cpp
test/data/: data_generator_test.cpp
